# azbackup

./: .gitignore  .terraform.lock.hcl  CMakeLists.txt  CMakePresets.json  build.sh  main.tf  vcpkg.json
src/: CMakeLists.txt  main.cpp
